--- a/index.html
+++ b/index.html
@@ -8,38 +8,42 @@
     <link rel="stylesheet" media="screen" href="css/screen.css">
   </head>
   <body>
-    <h1>ITMD 362 Lab 2 Form</h1>
+    <header>
+      <h1>ITMD 362 Lab 2</h1>
+      <h2>Andrew Cook</h2>
+    </header>
+    
     <main>
       <form>
         <ul class="form_list">
-          <li class="form_list form_list-item">
-            <label class="form_list-item form_list-item-label" id="email_label" for="email_input">Email Address:</label>
-            <input class="form_list-item form_list-item-input" id="email_input" type="email" size="30">
+          <li class="form_list__item">
+            <label class="form_list__item__label" id="email_label" for="email_input">Email Address:</label>
+            <input class="form_list__item__input" id="email_input" type="email" size="30">
           </li>
-          <li class="form_list form_list-item">
-            <label class="form_list-item form_list-item-label" id="phone_number_label">Phone Number:</label>
-            <ul class="form_list-item form_list-item-sublist" id="phone_number_input_list">
-              <li class="form_list-item-sublist form_list-item-sublist-item">
-                <input id="area_code" type="tel" pattern="[0-9]{3}">
+          <li class="form_list__item">
+            <label class="form_list__item__label" id="phone_number_label">Phone Number:</label>
+            <ul class="form_list__item__sublist" id="phone_number_input_list">
+              <li class="form_list__item__sublist__item">
+                <input class="form_list__item__sublist__item__input" id="area_code" type="tel" pattern="[0-9]{3}" size="4">
               </li>
-              <li class="form_list-item-sublist form_list-item-sublist-gap"> - </li>
-              <li class="form_list-item-sublist form_list-item-sublist-item">
-                <input id="telephone_prefix" type="tel" pattern="[0-9]{3}">
+              <li class="form_list__item__sublist__item"> - </li>
+              <li class="form_list__item__sublist__item">
+                <input class="form_list__item__sublist__item__input" id="telephone_prefix" type="tel" pattern="[0-9]{3}" size="4">
               </li>
-              <li class="form_list-item-sublist form_list-item-sublist-gap"> - </li>
-              <li class="form_list-item-sublist form_list-item-sublist-item">
-                <input id="line_number" type="tel" pattern="[0-9]{4}"> 
+              <li class="form_list__item__sublist__item"> - </li>
+              <li class="form_list__item__sublist__item">
+                <input class="form_list_item__sublist__item__input" id="line_number" type="tel" pattern="[0-9]{4}" size="5"> 
               </li>
             </ul>
           </li>
-          <li class="form_list form_list-item">
-            <label class="form_list-item form_list-item-label" id="dob_label" for="dob_input">Date of Birth:</label>
-            <input class="form_list-item form_list-item-input" id="dob_input" type="date" min="1900-01-01">
+          <li class="form_list__item">
+            <label class="form_list__item__label" id="dob_label" for="dob_input">Date of Birth:</label>
+            <input class="form_list__item__input" id="dob_input" type="date" min="1900-01-01">
+          </li>
+          <li class="form_list__item">
+            <input class="form_list__item__input" id="submit_button" type="submit" value="Submit"></input>
           </li>
         </ul>
-        <li class="form_list form_list-item">
-          <input class="form_list-item form_list-item-input" type="submit" value="Submit"></input>
-        </li>
       </form>
     </main>
   </body>
