--- a/index.html
+++ b/index.html
@@ -18,21 +18,21 @@
         <ul class="form_list">
           <li class="form_list__item">
             <label class="form_list__item__label" id="email_label" for="email_input">Email Address:</label>
-            <input class="form_list__item__input" id="email_input" type="email" size="30">
+            <input class="form_list__item__input" id="email_input" type="email">
           </li>
           <li class="form_list__item">
             <label class="form_list__item__label" id="phone_number_label">Phone Number:</label>
-            <ul class="form_list__item__sublist" id="phone_number_input_list">
+            <ul class="form_list__item__input form_list__item__sublist" id="phone_number_input_list">
               <li class="form_list__item__sublist__item">
-                <input class="form_list__item__sublist__item__input" id="area_code" type="tel" pattern="[0-9]{3}" size="4">
+                <input class="form_list__item__sublist__item__input" id="area_code" type="tel" pattern="[0-9]{3}">
               </li>
-              <li class="form_list__item__sublist__item"> - </li>
+              <li class="form_list__item__sublist__item form_list__item__sublist__item__gap" > - </li>
               <li class="form_list__item__sublist__item">
-                <input class="form_list__item__sublist__item__input" id="telephone_prefix" type="tel" pattern="[0-9]{3}" size="4">
+                <input class="form_list__item__sublist__item__input" id="telephone_prefix" type="tel" pattern="[0-9]{3}">
               </li>
-              <li class="form_list__item__sublist__item"> - </li>
+              <li class="form_list__item__sublist__item form_list__item__sublist__item__gap"> - </li>
               <li class="form_list__item__sublist__item">
-                <input class="form_list_item__sublist__item__input" id="line_number" type="tel" pattern="[0-9]{4}" size="5"> 
+                <input class="form_list__item__sublist__item__input" id="line_number" type="tel" pattern="[0-9]{4}"> 
               </li>
             </ul>
           </li>
@@ -41,7 +41,7 @@
             <input class="form_list__item__input" id="dob_input" type="date" min="1900-01-01">
           </li>
           <li class="form_list__item">
-            <input class="form_list__item__input" id="submit_button" type="submit" value="Submit"></input>
+            <input class="form_list__item__input" id="submit_button" type="submit" value="Submit">
           </li>
         </ul>
       </form>
